31Mar early AM update
